samples/_failures_safe/1761276556_b8bfe8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f6f0464.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_0f6f0464.c:161:11: error: expected ‘;’ at end of input
  161 |     (*pos)
      |           ^
      |           ;
./samples/SAFE/__tmp_0f6f0464.c:161:5: error: expected declaration or statement at end of input
  161 |     (*pos)
      |     ^
